--- a/config/database.yml
+++ b/config/database.yml
@@ -81,5 +81,8 @@ test:
 production:
   <<: *default
   database: hello_world_production
-  username: hello_world
-  password: <%= ENV['HELLO_WORLD_DATABASE_PASSWORD'] %>
+  username: postgres
+  password: 'postgres'
+  pool: '5'
+  host: localhost
+  port: '5432'
